# sermo

./: .cursorignore  .gitignore  alembic.ini  package-lock.json  package.json  project_structure  pytest.ini  requirements.txt  requirements_stable.txt  types.ts
backend/: .coverage  .env.example  .gitignore  README.md  __main__.py  alembic.ini  check_schema.py  endpoints.txt  main.py  models.py  pyproject.toml  pytest.ini  requirements.dev.txt  requirements.txt  requirements_stable.txt  requirements_temp.txt  reset_db.py  run.py  start.py
backend/ai/: messages_to_rag.py
backend/alembic/: env.py
backend/alembic/versions/: 020edb3b3a22_add_last_profile_generated_to_users.py  1b13cd373828_merge_heads.py  20af80d894bd_add_description_to_users.py  2c1cbdc7087f_add_description_to_files.py  300e0cd78c6a_merge_heads.py  4a5ab2d8b88a_add_is_public_to_channels.py  5861eb0bcd11_add_is_vc_to_channels.py  75af0f0f2a32_add_bot_message_scores_table.py  81aca82f1de9_allow_null_usernames.py  a12986a78789_add_is_bot_field_to_users.py  add_auth0_fields_to_user.py  add_has_attachments_to_messages.py  add_is_bot_to_messages.py  add_is_bot_to_users.py  add_refresh_tokens_table.py  b3a0689ab2dd_add_updated_at_field_to_channel_model.py  b975dc1ec424_.py  e394dea4a31b_merge_heads.py  ffd99aecd4ab_initial_migration.py  fix_refresh_tokens_column.py
backend/api/: messages.py
backend/app/: __init__.py  database.py  main.py
backend/app/ai/: context_generator.py  file_description.py  file_handler.py  message_indexer.py  profile_generator.py
backend/app/api/: deps.py
backend/app/auth/: auth0.py  models.py  router.py  security.py
backend/app/models/: __init__.py  channel.py  (+7 more)
backend/docs/: api_endpoints.md  frontend_design.md
backend/tests/: README.md  conftest.py  run_all_tests.py  test_auth.py  test_config.py
backend/venv311/: pyvenv.cfg
(+182 files in other folders)
