[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sermo-app"
version = "0.1.0"
description = "Sermo Chat Application Backend"
requires-python = ">=3.9"
authors = [
    { name = "Sermo Team" }
]
dependencies = []  # Dependencies are managed in requirements.txt

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-v"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]

[tool.black]
line-length = 100
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.hatch.build]
artifacts = [
    "app/**/*.py",
    "app/**/*.pyi",
]
exclude = [
    "tests/*",
    "uploads/*",
    ".env",
    ".env.example",
    "*.pyc",
    "__pycache__",
] 